syntax = "proto3";

package com.road.yishi.proto.active;

message OnlinerewardReq {
  int32 op = 1;
}
