syntax = "proto3";

package com.road.yishi.proto.active;

message PassBuyReqMsg {
  int32 op = 1;
  int32 grade = 2;
}
