syntax = "proto3";

package com.road.yishi.proto.active;

message PassInfoReqMsg {
  int32 op = 1;
  int32 type = 2;
  int32 index = 3;
}
